Manage login modal

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -139,3 +139,10 @@
 
 </footer>
 <!-- /Footer -->
+
+
+          <!-- whatsapp chat  -->
+          <div class="fixedbutton">
+            <img src="assets/img/whatapp.png">
+          </div>
+          <!-- /whatsapp chat  -->
