--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,13 @@
-        <!-- Header -->
+  <!-- Main Wrapper -->
+<div class="main-wrapper">
+    <div class="top-container">
+  
+      <p class="animate__animated animate__heartBeat animate__slower animate__repeat-3 3 ">Book a Appointment on WhatsApp
+        or Call on +91 1234567890</p>
+    </div>      
+           
+       
+       <!-- Header -->
         <header class="header " id="mainHeader">
             <nav class="navbar navbar-expand-lg header-nav">
                 <div class="navbar-header">
@@ -71,7 +80,7 @@
 
                 <ul class="nav header-navbar-rht">
                     <li class="nav-item">
-                        <a class="nav-link btn-grad" href="login.html">BOOK AN APPOINTMENT </a>
+                        <a class="nav-link btn-grad" href="login.html" data-toggle="modal" data-target="#exampleModal">BOOK AN APPOINTMENT </a>
                     </li>
 
                     <li class="nav-item">
@@ -80,9 +89,28 @@
 
                 </ul>
             </nav>
-
-
-
-
         </header>
+        </div>
         <!-- /Header -->
+
+  <!-- Modal -->
+  <div class="modal fade login-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" >
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div class="login-image">
+                <img src="../../../assets/img/teladent.png" alt="">
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
