--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,116 +1,138 @@
-  <!-- Main Wrapper -->
+<!-- Main Wrapper -->
 <div class="main-wrapper">
     <div class="top-container">
-  
-      <p class="animate__animated animate__heartBeat animate__slower animate__repeat-3 3 ">Book a Appointment on WhatsApp
-        or Call on +91 1234567890</p>
-    </div>      
-           
-       
-       <!-- Header -->
-        <header class="header " id="mainHeader">
-            <nav class="navbar navbar-expand-lg header-nav">
-                <div class="navbar-header">
-                    <a id="mobile_btn" href="javascript:void(0);">
-                        <span class="bar-icon">
-								<span></span>
+
+        <p class="animate__animated animate__heartBeat animate__slower animate__repeat-3 3 ">Book a Appointment on
+            WhatsApp
+            or Call on +91 1234567890</p>
+    </div>
+
+
+    <!-- Header -->
+    <header class="header " id="mainHeader">
+        <nav class="navbar navbar-expand-lg header-nav">
+            <div class="navbar-header">
+                <a id="mobile_btn" href="javascript:void(0);">
+                    <span class="bar-icon">
                         <span></span>
                         <span></span>
-                        </span>
-                    </a>
-                    <a href="index.html" class="navbar-brand logo">
+                        <span></span>
+                    </span>
+                </a>
+                <a href="index.html" class="navbar-brand logo">
+                    <img src="assets/img/logo.png" class="img-fluid" alt="Logo">
+                </a>
+            </div>
+            <div class="main-menu-wrapper">
+
+                <div class="menu-header">
+                    <a href="index.html" class="menu-logo">
                         <img src="assets/img/logo.png" class="img-fluid" alt="Logo">
                     </a>
+                    <a id="menu_close" class="menu-close" href="javascript:void(0);">
+                        <i class="fas fa-times"></i>
+                    </a>
                 </div>
-                <div class="main-menu-wrapper">
-
-                    <div class="menu-header">
-                        <a href="index.html" class="menu-logo">
-                            <img src="assets/img/logo.png" class="img-fluid" alt="Logo">
-                        </a>
-                        <a id="menu_close" class="menu-close" href="javascript:void(0);">
-                            <i class="fas fa-times"></i>
-                        </a>
-                    </div>
 
 
-                    <nav class="tabs d-none d-md-block">
-                        <div class="selector"></div>
-                        <a href="about.html">Who we are</a>
-                        <a href="#">Oral Test</a>
-                        <a href="#">How We Can Help</a>
-                        <a href="#">Info Bytes</a>
+                <nav class="tabs d-none d-md-block">
+                    <div class="selector"></div>
+                    <a href="about.html">Who we are</a>
+                    <a href="#">Oral Test</a>
+                    <a href="#">How We Can Help</a>
+                    <a href="#">Info Bytes</a>
+                    <a href="#"> find a clinic</a>
+
+                </nav>
+
+                <ul class="main-nav ">
+                    <li class="login-link">
+                        <a href="about.html">Who we are </a>
+
+                    </li>
+                    <li class="login-link">
+                        <a href="#"> Oral Test</a>
+
+                    </li>
+
+
+                    <li class="login-link">
+                        <a href="#">How We Can Help </a>
+
+                    </li>
+
+                    <li class="login-link">
+                        <a href="#"> Info Bytes</a>
+
+                    </li>
+                    <li class="login-link">
                         <a href="#"> find a clinic</a>
 
-                    </nav>
+                    </li>
 
-                    <ul class="main-nav ">
-                        <li class="login-link">
-                            <a href="about.html">Who we are </a>
+                    <li class="login-link">
+                        <a href="login.html">BOOK AN APPOINTMENT </a>
+                    </li>
+                    <li class="login-link">
+                        <a href="login.html">Login </a>
+                    </li>
+                </ul>
+            </div>
 
-                        </li>
-                        <li class="login-link">
-                            <a href="#"> Oral Test</a>
+            <ul class="nav header-navbar-rht">
+                <li class="nav-item">
+                    <a class="nav-link btn-grad" href="login.html" data-toggle="modal" data-target="#exampleModal">BOOK
+                        AN APPOINTMENT </a>
+                </li>
 
-                        </li>
+                <li class="nav-item">
+                    <a class="nav-link btn-grad" href="login.html"> <i class="fa fa-user " aria-hidden="true"></i> </a>
+                </li>
 
+            </ul>
+        </nav>
+    </header>
+</div>
+<!-- /Header -->
 
-                        <li class="login-link">
-                            <a href="#">How We Can Help </a>
-
-                        </li>
-
-                        <li class="login-link">
-                            <a href="#"> Info Bytes</a>
-
-                        </li>
-                        <li class="login-link">
-                            <a href="#"> find a clinic</a>
-
-                        </li>
-
-                        <li class="login-link">
-                            <a href="login.html">BOOK AN APPOINTMENT </a>
-                        </li>
-                        <li class="login-link">
-                            <a href="login.html">Login </a>
-                        </li>
-                    </ul>
+<!-- Modal -->
+<div class="modal fade login-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="login-image">
+                    <img src="../../../assets/img/teladent.png" alt="">
+                </div>
+                <div class="login-form">
+                    <form>
+                        <div class="form-group">
+                            <ngx-intl-tel-input [cssClass]="'form-control custom'" [enableAutoCountrySelect]="false"
+                                [enablePlaceholder]="true" [searchCountryFlag]="true"
+                                [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name, SearchCountryField.DialCode]"
+                                [selectFirstCountry]="false" [selectedCountryISO]="setCountry"
+                                [tooltipField]="TooltipLabel.Name" [phoneValidation]="true"
+                                [separateDialCode]="separateDialCode" name="phone">
+                            </ngx-intl-tel-input>
+                        </div>
+                        <div class="form-group">
+                            <input type="password" class="form-control" placeholder="Password">
+                        </div>
+                        <div class="button-group text-center">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Login</button>
+                        </div>
+                    </form>
                 </div>
 
-                <ul class="nav header-navbar-rht">
-                    <li class="nav-item">
-                        <a class="nav-link btn-grad" href="login.html" data-toggle="modal" data-target="#exampleModal">BOOK AN APPOINTMENT </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link btn-grad" href="login.html"> <i class="fa fa-user " aria-hidden="true"></i> </a>
-                    </li>
-
-                </ul>
-            </nav>
-        </header>
-        </div>
-        <!-- /Header -->
-
-  <!-- Modal -->
-  <div class="modal fade login-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <div class="login-image">
-                <img src="../../../assets/img/teladent.png" alt="">
             </div>
+            <!-- <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div> -->
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
     </div>
-  </div>
+</div>
