--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11069,7 +11069,7 @@ ul.benifits-col li i {
 
 /* LOGIN MODAL */
 .login-modal .modal-content {
-    height: 600px !important;
+    height: 500px !important;
     width: 400px !important;
     border-radius: 16px !important;
     margin-left: 50px !important;
@@ -11085,12 +11085,51 @@ ul.benifits-col li i {
     width: 45%;
 }
 
-.modal-body{
+.login-image {
     text-align: center;
 }
 
 .modal-open{
     padding-right: 0px !important;
 }
+.iti {
+    display: block !important;
+}
+.country-dropdown {
+    width: 288px !important;
+}
+input#country-search-box {
+    border-color: #dcdcdc;
+    color: #333;
+    font-size: 15px;
+    min-height: 46px;
+    padding: 6px 15px;
+}
+
+.iti__country-list{
+    overflow-x: hidden;
+}
+
+.login-form{
+    margin-top: 32px;
+    padding: 25px;
+}
+.login-form .form-group {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.login-form .button-group .btn.btn-secondary{
+    color: white;
+    box-shadow: none;
+    border: 0px;
+    width: 69%;
+    height: 50px;
+    border-radius: 31px;
+    text-transform: uppercase;
+    font-size: 18px;
+    background-image: linear-gradient(to right, #314755 0%, #26a0da 51%, #314755 100%);
+}
+
 /* LOGIN MODAL */
  
