--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -110,26 +110,32 @@
                 </div>
                 <!-- FOR LOGIN -->
                 <div class="login-form" *ngIf="showHideForm.login">
-                    <form>
+                    <form [formGroup]="loginForm" (ngSubmit)="submitLogin()">
                         <div class="form-group">
                             <ngx-intl-tel-input [cssClass]="'form-control custom'" [enableAutoCountrySelect]="false"
                                 [enablePlaceholder]="true" [searchCountryFlag]="true"
                                 [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name, SearchCountryField.DialCode]"
                                 [selectFirstCountry]="false" [selectedCountryISO]="setCountry"
                                 [tooltipField]="TooltipLabel.Name" [phoneValidation]="true"
-                                [separateDialCode]="separateDialCode" name="phone">
+                                [separateDialCode]="separateDialCode" name="phone" formControlName="phone">
                             </ngx-intl-tel-input>
+                            <div *ngIf="loginSubmit && loginValidation.phone.errors" class="invalid-feedback">
+                                <div *ngIf="loginValidation.phone.errors.required">Phone No. is Mandatory</div>
+                              </div>
                         </div>
                         <div class="form-group form-focus">
-                            <input type="password" class="form-control  floating" >
+                            <input type="password" class="form-control floating" formControlName="password" >
                             <label class="focus-label">Password</label>
+                            <div *ngIf="loginSubmit && loginValidation.password.errors" class="invalid-feedback">
+                                <div *ngIf="loginValidation.password.errors.required">Password is Mandatory</div>
+                              </div>
                         </div>
-                        <div class="button-group text-center">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Login</button>
+                        <div class="button-group text-center margin-top30">
+                            <button type="submit" class="btn btn-secondary">Login</button>
                         </div>
                     </form>
                     <div class="button-group text-center margin-top10">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="signup()"> Sign Up</button>
+                        <button type="button" class="btn btn-secondary"  (click)="signup()"> Sign Up</button>
                     </div>
                     <div class="margin-top10 text-center">
                         <a href="javascript:void(0);" (click)="forgotPassword()">Forgot password?</a>
