--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11133,6 +11133,10 @@ input#country-search-box {
     margin-top: 10px;
 }
 
+.margin-top30{
+    margin-top: 30px;
+}
+
 /* LOGIN MODAL */
  
 /* OTP */
@@ -11140,4 +11144,9 @@ input#country-search-box {
     width: 35px !important;
     height: 40px !important;
     font-size: 20px !important;
+}
+
+
+.invalid-feedback {
+    display: block !important;
 }
