--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -81,12 +81,12 @@
 
             <ul class="nav header-navbar-rht">
                 <li class="nav-item">
-                    <a class="nav-link btn-grad" href="login.html" data-toggle="modal" data-target="#exampleModal">BOOK
+                    <a class="nav-link btn-grad" href="login.html" >BOOK
                         AN APPOINTMENT </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link btn-grad" href="login.html"> <i class="fa fa-user " aria-hidden="true"></i> </a>
+                    <a class="nav-link btn-grad" href="login.html" data-toggle="modal" data-target="#exampleModal"> <i class="fa fa-user " aria-hidden="true"></i> </a>
                 </li>
 
             </ul>
