--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -81,12 +81,13 @@
 
             <ul class="nav header-navbar-rht">
                 <li class="nav-item">
-                    <a class="nav-link btn-grad" href="login.html" >BOOK
+                    <a class="nav-link btn-grad" href="login.html">BOOK
                         AN APPOINTMENT </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link btn-grad" href="login.html" data-toggle="modal" data-target="#exampleModal" (click)="login()"> <i class="fa fa-user " aria-hidden="true"></i> </a>
+                    <a class="nav-link btn-grad" href="login.html" data-toggle="modal" data-target="#exampleModal"
+                        (click)="login()"> <i class="fa fa-user " aria-hidden="true"></i> </a>
                 </li>
 
             </ul>
@@ -110,7 +111,7 @@
                 </div>
                 <!-- FOR LOGIN -->
                 <div class="login-form" *ngIf="showHideForm.login">
-                    <form  [formGroup]="loginForm" (ngSubmit)="submitLogin()">
+                    <form [formGroup]="loginForm" (ngSubmit)="submitLogin()">
                         <div class="form-group">
                             <ngx-intl-tel-input [cssClass]="'form-control custom'" [enableAutoCountrySelect]="false"
                                 [enablePlaceholder]="true" [searchCountryFlag]="true"
@@ -121,20 +122,21 @@
                             </ngx-intl-tel-input>
                             <div *ngIf="loginSubmit && loginValidation.phone.errors" class="invalid-feedback">
                                 <div *ngIf="loginValidation.phone.errors.required">Phone No. is Mandatory</div>
-                              </div>
+                            </div>
                         </div>
                         <div class="form-group form-focus">
-                            <input type="password" class="form-control floating" formControlName="password" >
+                            <input type="password" class="form-control floating" formControlName="password">
                             <label class="focus-label">Password</label>
                             <div *ngIf="loginSubmit && loginValidation.password.errors" class="invalid-feedback">
                                 <div *ngIf="loginValidation.password.errors.required">Password is Mandatory</div>
-                              </div>
+                            </div>
                         </div>
                         <div class="text-right">
-                            <a class="forgot-link" href="javascript:void(0);" (click)="forgotPassword()">Forgot Password ?</a>
+                            <a class="forgot-link" href="javascript:void(0);" (click)="forgotPassword()">Forgot Password
+                                ?</a>
                         </div>
                         <button class="btn btn-primary btn-block btn-lg btn-grad" type="submit">Login</button>
-                        <div class="login-or">
+                        <!-- <div class="login-or">
                             <span class="or-line"></span>
                             <span class="span-or">or</span>
                         </div>
@@ -149,12 +151,24 @@
                                     <i class="fab fa-google mr-1"></i> Login
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="text-center dont-have">Don’t have an account?
                             <a href="javascript:void(0);" (click)="signup()">Register</a>
                         </div>
                     </form>
-                    <!-- <form [formGroup]="loginForm" (ngSubmit)="submitLogin()">
+                </div>
+
+                <!-- FOR SIGNUP -->
+                <div class="login-form" *ngIf="showHideForm.signup">
+                    <form [formGroup]="signupForm" (ngSubmit)="submitSignup()">
+                        <div class="form-group form-focus">
+                            <input type="text" class="form-control floating" placeholder="Fullname"
+                                formControlName="name">
+                            <label class="focus-label">Fullname</label>
+                            <div *ngIf="signupSubmit && signupValidation.phone.errors" class="invalid-feedback">
+                                <div *ngIf="signupValidation.phone.errors.required">Name is Mandatory</div>
+                            </div>
+                        </div>
                         <div class="form-group">
                             <ngx-intl-tel-input [cssClass]="'form-control custom'" [enableAutoCountrySelect]="false"
                                 [enablePlaceholder]="true" [searchCountryFlag]="true"
@@ -163,56 +177,36 @@
                                 [tooltipField]="TooltipLabel.Name" [phoneValidation]="true"
                                 [separateDialCode]="separateDialCode" name="phone" formControlName="phone">
                             </ngx-intl-tel-input>
-                            <div *ngIf="loginSubmit && loginValidation.phone.errors" class="invalid-feedback">
-                                <div *ngIf="loginValidation.phone.errors.required">Phone No. is Mandatory</div>
-                              </div>
+                            <div *ngIf="signupSubmit && signupValidation.phone.errors" class="invalid-feedback">
+                                <div *ngIf="signupValidation.phone.errors.required">Phone No. is Mandatory</div>
+                            </div>
                         </div>
                         <div class="form-group form-focus">
-                            <input type="password" class="form-control floating" formControlName="password" >
+                            <input type="password" class="form-control floating" formControlName="password">
                             <label class="focus-label">Password</label>
-                            <div *ngIf="loginSubmit && loginValidation.password.errors" class="invalid-feedback">
-                                <div *ngIf="loginValidation.password.errors.required">Password is Mandatory</div>
-                              </div>
+                            <div *ngIf="signupSubmit && signupValidation.password.errors" class="invalid-feedback">
+                                <div *ngIf="signupValidation.password.errors.required">Password is Mandatory</div>
+                                <div *ngIf="signupValidation.password.errors.pattern">Invalid Password</div>
+                            </div>
                         </div>
-                        <div class="button-group text-center margin-top30">
-                            <button type="submit" class="btn btn-secondary">Login</button>
-                        </div>
-                    </form>
-                    <div class="button-group text-center margin-top10">
-                        <button type="button" class="btn btn-secondary"  (click)="signup()"> Sign Up</button>
-                    </div>
-                    <div class="margin-top10 text-center">
-                        <a href="javascript:void(0);" (click)="forgotPassword()">Forgot password?</a>
-                    </div> -->
-                </div>
-                
-                <!-- FOR SIGNUP -->
-                <div class="login-form" *ngIf="showHideForm.signup">
-                    <form>
+
                         <div class="form-group form-focus">
-                            <input type="text" class="form-control floating" placeholder="Fullname">
-                            <label class="focus-label">Fullname</label>
+                            <input type="password" class="form-control floating" formControlName="confirmPassword">
+                            <label class="focus-label">Confirm Password</label>
+                            <div *ngIf="signupSubmit && signupValidation.confirmPassword.errors"
+                                class="invalid-feedback">
+                                <div *ngIf="signupValidation.confirmPassword.errors.required">Confirm Password is
+                                    Mandatory</div>
+                                <div *ngIf="signupValidation.confirmPassword.errors.mustMatch">Password Mismatch</div>
+                            </div>
                         </div>
-                        <div class="form-group">
-                            <ngx-intl-tel-input [cssClass]="'form-control custom'" [enableAutoCountrySelect]="false"
-                                [enablePlaceholder]="true" [searchCountryFlag]="true"
-                                [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name, SearchCountryField.DialCode]"
-                                [selectFirstCountry]="false" [selectedCountryISO]="setCountry"
-                                [tooltipField]="TooltipLabel.Name" [phoneValidation]="true"
-                                [separateDialCode]="separateDialCode" name="phone">
-                            </ngx-intl-tel-input>
+
+                        <div class="text-right">
+                            <a class="forgot-link" href="javascript:void(0);" (click)="login()">Already have an
+                                account?</a>
                         </div>
-                        <div class="form-group form-focus">
-                            <input type="password" class="form-control floating" placeholder="Password">
-                            <label class="focus-label">Password</label>
-                        </div>
-                        <div class="button-group text-center">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal" >Submit</button>
-                        </div>
+                        <button class="btn btn-primary btn-block btn-lg btn-grad" type="submit">Signup</button>
                     </form>
-                    <div class="button-group text-center margin-top10">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="login()"> Login</button>
-                    </div>
                 </div>
 
                 <!-- FOR FORGOT PASSWORD -->
@@ -228,30 +222,32 @@
                             </ngx-intl-tel-input>
                         </div>
                         <div class="button-group text-center">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal" >Submit</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Submit</button>
                         </div>
                     </form>
                     <div class="button-group text-center margin-top10">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="login()">Login</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                            (click)="login()">Login</button>
                     </div>
                 </div>
 
 
                 <!-- FOR OTP -->
-                 <div class="login-form" *ngIf="showHideForm.otp">
+                <div class="login-form">
                     <form>
                         <div class="form-group text-center">
-                            <ng-otp-input  (onInputChange)="onOtpChange($event)"  [config]="{length:6}"></ng-otp-input>
+                            <ng-otp-input (onInputChange)="onOtpChange($event)" [config]="{length:6}"></ng-otp-input>
                         </div>
                         <div class="button-group text-center">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Submit</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                                [disabled]="otp?.length < 6">Submit</button>
                         </div>
                     </form>
                     <div class="button-group text-center margin-top10">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal"> <i class="fa fa-lock"> </i> Resend OTP</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal"> <i class="fa fa-lock">
+                            </i> Resend OTP</button>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
