--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -37,7 +37,7 @@
 
                 <nav class="tabs d-none d-md-block">
                     <div class="selector"></div>
-                    <a href="about.html">Who we are</a>
+                    <a href="about.html" class="active">Who we are</a>
                     <a href="#">Oral Test</a>
                     <a href="#">How We Can Help</a>
                     <a href="#">Info Bytes</a>
@@ -79,18 +79,41 @@
                 </ul>
             </div>
 
-            <ul class="nav header-navbar-rht">
+             <ul class="nav header-navbar-rht">
                 <li class="nav-item">
                     <a class="nav-link btn-grad" href="login.html">BOOK
                         AN APPOINTMENT </a>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="!showUser">
                     <a class="nav-link btn-grad" href="login.html" data-toggle="modal" data-target="#exampleModal"
                         (click)="login()"> <i class="fa fa-user " aria-hidden="true"></i> </a>
                 </li>
 
-            </ul>
+                <!-- User Menu -->
+                <li class="nav-item dropdown has-arrow logged-item" *ngIf="showUser">
+                    <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                        <span class="user-img">
+                                    <img class="rounded-circle" src="{{userDetails.imageUrl}}" width="31" alt="{{ userDetails.firstName + ' ' + userDetails.lastName}}">
+                                </span>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right">
+                        <div class="user-header">
+                            <div class="avatar avatar-sm">
+                                <img src="{{userDetails.imageUrl}}" alt="User Image" class="avatar-img rounded-circle">
+                            </div>
+                            <div class="user-text">
+                                <h6>{{ userDetails.firstName + ' ' + userDetails.lastName}}</h6>
+                                <p class="text-muted mb-0">Dentist</p>
+                            </div>
+                        </div>
+                        <a class="dropdown-item pointer">Dashboard</a>
+                        <a class="dropdown-item pointer">Profile Settings</a>
+                        <a class="dropdown-item pointer"  (click)="logout()">Logout</a>
+                    </div>
+                </li>
+                <!-- /User Menu -->
+            </ul> 
         </nav>
     </header>
 </div>
@@ -122,6 +145,7 @@
                             </ngx-intl-tel-input>
                             <div *ngIf="loginSubmit && loginValidation.phone.errors" class="invalid-feedback">
                                 <div *ngIf="loginValidation.phone.errors.required">Phone No. is Mandatory</div>
+                                <div *ngIf="loginValidation.phone.invalid && !loginValidation.phone.errors.required">Invalid Phone No.</div>
                             </div>
                         </div>
                         <div class="form-group form-focus">
@@ -179,6 +203,7 @@
                             </ngx-intl-tel-input>
                             <div *ngIf="signupSubmit && signupValidation.phone.errors" class="invalid-feedback">
                                 <div *ngIf="signupValidation.phone.errors.required">Phone No. is Mandatory</div>
+                                < <div *ngIf="signupValidation.phone.invalid && !signupValidation.phone.errors.required">Invalid Phone No.</div>
                             </div>
                         </div>
                         <div class="form-group form-focus">
@@ -251,6 +276,10 @@
 
                         <button class="btn btn-primary btn-block btn-lg btn-grad" type="submit"
                             [disabled]="otp?.length < 6">Submit</button>
+
+                            <div class="text-center dont-have">Don’t have an account?
+                                <a href="javascript:void(0);" (click)="signup()">Register</a>
+                            </div>
                     </form>
                 </div>
             </div>
