Add Doctor-profile ui

--- a/src/app/module/index/index.component.html
+++ b/src/app/module/index/index.component.html
@@ -76,7 +76,7 @@
                                 animate__slower ">The Online Check Up from Sensodyne is designed to help you find out about the symptoms associated with sensitive teeth. Do you have similar symptoms?</p>
                                 <div class="button-group group-sm justify-content-center justify-content-sm-start d-flex flex-wrap">
                                     <a class="wow animate__animated animate__slideInRight
-                                    animate__slower  btn-grad" href="#">Book your online Consultation Now </a>
+                                    animate__slower  btn-grad" href="javascript:void(0);" routerLink="/online-consultation">Book your online Consultation Now </a>
                                 </div>
   
   
