--- a/src/app/module/online-consultation/online-consultation.component.html
+++ b/src/app/module/online-consultation/online-consultation.component.html
@@ -156,7 +156,7 @@
                                 </div>
                                 <div class="clinic-booking">
                                     <a class="view-pro-btn" routerLink="/doctor-profile">View Profile</a>
-                                    <a class="apt-btn" href="booking.html">Book Appointment</a>
+                                    <a class="apt-btn" routerLink="/booking">Book Appointment</a>
                                 </div>
                             </div>
                         </div>
