--- a/src/app/module/index/index.component.html
+++ b/src/app/module/index/index.component.html
@@ -76,7 +76,7 @@
                                 animate__slower ">The Online Check Up from Sensodyne is designed to help you find out about the symptoms associated with sensitive teeth. Do you have similar symptoms?</p>
                                 <div class="button-group group-sm justify-content-center justify-content-sm-start d-flex flex-wrap">
                                     <a class="wow animate__animated animate__slideInRight
-                                    animate__slower  btn-grad" href="javascript:void(0);" routerLink="/online-consultation">Book your online Consultation Now </a>
+                                    animate__slower  btn-grad" routerLink="/online-consultation" [queryParams]="{limit: 10, skip: 0 }">Book your online Consultation Now </a>
                                 </div>
   
   
@@ -123,10 +123,10 @@
                             <div class="col-md-3">
                                 <div class="nav flex-column nav-pills animate__animated animate__slideInLeft
                                 animate__slower animate__delay-5s 5s" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                                    <a class="nav-link active" id="v-pills-one-tab" data-toggle="pill" href="#v-pills-one" role="tab" aria-controls="v-pills-one" aria-selected="true">[A] Child </a>
-                                    <a class="nav-link" id="v-pills-two-tab" data-toggle="pill" href="#v-pills-two" role="tab" aria-controls="v-pills-two" aria-selected="false">[B] Men</a>
-                                    <a class="nav-link" id="v-pills-three-tab" data-toggle="pill" href="#v-pills-three" role="tab" aria-controls="v-pills-three" aria-selected="false">[C] Women</a>
-                                    <a class="nav-link" id="v-pills-four-tab" data-toggle="pill" href="#v-pills-four" role="tab" aria-controls="v-pills-four" aria-selected="false">[D] Senior Citizen</a>
+                                    <a class="nav-link active" id="v-pills-one-tab" data-toggle="pill" href="#v-pills-one" role="tab" aria-controls="v-pills-one" aria-selected="true">Child </a>
+                                    <a class="nav-link" id="v-pills-two-tab" data-toggle="pill" href="#v-pills-two" role="tab" aria-controls="v-pills-two" aria-selected="false">Men</a>
+                                    <a class="nav-link" id="v-pills-three-tab" data-toggle="pill" href="#v-pills-three" role="tab" aria-controls="v-pills-three" aria-selected="false">Women</a>
+                                    <a class="nav-link" id="v-pills-four-tab" data-toggle="pill" href="#v-pills-four" role="tab" aria-controls="v-pills-four" aria-selected="false">Senior Citizen</a>
                                 </div>
                             </div>
                             <div class="col-md-9 shadow animate__animated animate__slideInRight
