Update Dynamic Payment Gareway

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -87,7 +87,7 @@
 
                 <li class="nav-item" *ngIf="!showUser">
                     <a class="nav-link btn-grad" href="login.html" data-toggle="modal" data-target="#exampleModal"
-                        (click)="login()"> <i class="fa fa-user " aria-hidden="true"></i> </a>
+                        (click)="login()"> <i class="fa fa-user " aria-hidden="true" id="loginCall"></i> </a>
                 </li>
 
                 <!-- User Menu -->
