--- a/src/app/module/booking/booking.component.html
+++ b/src/app/module/booking/booking.component.html
@@ -30,16 +30,25 @@
 								<img src="assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
 							</a>
 							<div class="booking-info">
-								<h4><a href="doctor-profile.html">Dr. Darren Elder</a></h4>
+								<h4><a href="doctor-profile.html">{{doctorDetail?.name}}</a></h4>
 								<div class="rating">
-									<i class="fas fa-star filled"></i>
-									<i class="fas fa-star filled"></i>
-									<i class="fas fa-star filled"></i>
-									<i class="fas fa-star filled"></i>
-									<i class="fas fa-star"></i>
-									<span class="d-inline-block average-rating">35</span>
+									<i *ngIf="doctorDetail?.rating === 1 || doctorDetail?.rating > 1" class="fas fa-star filled"></i>
+                                        <i *ngIf="doctorDetail?.rating < 1" class="fas fa-star"></i>
+
+                                        <i *ngIf="doctorDetail?.rating === 2 || doctorDetail?.rating > 2" class="fas fa-star filled"></i>
+                                        <i *ngIf="doctorDetail?.rating < 2" class="fas fa-star"></i>
+
+                                        <i *ngIf="doctorDetail?.rating === 3 || doctorDetail?.rating > 3" class="fas fa-star filled"></i>
+                                        <i *ngIf="doctorDetail?.rating < 3" class="fas fa-star"></i>
+
+                                        <i *ngIf="doctorDetail?.rating === 4 || doctorDetail?.rating > 4" class="fas fa-star filled"></i>
+                                        <i *ngIf="doctorDetail?.rating < 4" class="fas fa-star"></i>
+
+                                        <i *ngIf="doctorDetail?.rating === 5" class="fas fa-star filled"></i>
+                                        <i *ngIf="doctorDetail?.rating < 5" class="fas fa-star"></i>
+									<span class="d-inline-block average-rating">({{doctorDetail?.totalReview}})</span>
 								</div>
-								<p class="text-muted mb-0"><i class="fas fa-map-marker-alt"></i> Newyork, USA</p>
+								<p class="text-muted mb-0"><i class="fas fa-map-marker-alt"></i> {{doctorDetail?.city}}, {{doctorDetail?.state}}</p>
 							</div>
 						</div>
 					</div>
@@ -56,43 +65,9 @@
 								<!-- Day Slot -->
 								<div class="day-slot">
 									<ul>
-										<li class="left-arrow">
-											<a href="#">
-												<i class="fa fa-chevron-left"></i>
-											</a>
-										</li>
-										<li>
-											<span>Mon</span>
-											<span class="slot-date">11 Nov <small class="slot-year">2019</small></span>
-										</li>
-										<li>
-											<span>Tue</span>
-											<span class="slot-date">12 Nov <small class="slot-year">2019</small></span>
-										</li>
-										<li>
-											<span>Wed</span>
-											<span class="slot-date">13 Nov <small class="slot-year">2019</small></span>
-										</li>
-										<li>
-											<span>Thu</span>
-											<span class="slot-date">14 Nov <small class="slot-year">2019</small></span>
-										</li>
-										<li>
-											<span>Fri</span>
-											<span class="slot-date">15 Nov <small class="slot-year">2019</small></span>
-										</li>
-										<li>
-											<span>Sat</span>
-											<span class="slot-date">16 Nov <small class="slot-year">2019</small></span>
-										</li>
-										<li>
-											<span>Sun</span>
-											<span class="slot-date">17 Nov <small class="slot-year">2019</small></span>
-										</li>
-										<li class="right-arrow">
-											<a href="#">
-												<i class="fa fa-chevron-right"></i>
-											</a>
+										<li *ngFor="let dateStr of availableSlot?.weekDays">
+											<span>{{dateStr | date: 'E'}}</span>
+											<span class="slot-date">{{ dateStr | date: 'dd' }} {{ dateStr | date: 'MMM' }} <small class="slot-year">{{ dateStr | date: 'YYYY' }}</small></span>
 										</li>
 									</ul>
 								</div>
@@ -111,81 +86,15 @@
 								<!-- Time Slot -->
 								<div class="time-slot">
 									<ul class="clearfix">
-										<li>
-											<a class="timing" href="#">
-												<span>9:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>10:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>11:00</span> <span>AM</span>
-											</a>
-										</li>
-										<li>
-											<a class="timing" href="#">
-												<span>9:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>10:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>11:00</span> <span>AM</span>
-											</a>
-										</li>
-										<li>
-											<a class="timing" href="#">
-												<span>9:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>10:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>11:00</span> <span>AM</span>
-											</a>
-										</li>
-										<li>
-											<a class="timing" href="#">
-												<span>9:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>10:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>11:00</span> <span>AM</span>
-											</a>
-										</li>
-										<li>
-											<a class="timing" href="#">
-												<span>9:00</span> <span>AM</span>
-											</a>
-											<a class="timing selected" href="#">
-												<span>10:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>11:00</span> <span>AM</span>
-											</a>
-										</li>
-										<li>
-											<a class="timing" href="#">
-												<span>9:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>10:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>11:00</span> <span>AM</span>
-											</a>
-										</li>
-										<li>
-											<a class="timing" href="#">
-												<span>9:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>10:00</span> <span>AM</span>
-											</a>
-											<a class="timing" href="#">
-												<span>11:00</span> <span>AM</span>
+										<li *ngFor="let timeSlot of availableSlot?.availableSlot">
+											<a 
+											class="timing" 
+											href="javascript:void(0)" 
+											*ngFor="let times of timeSlot?.slot" 
+											id="{{timeSlot?.date}}_{{times?.value}}"
+											[ngClass]="times?.baseValue === 'N/A' ? 'disabled-slot' : '' "
+											(click)="selectedSlot(times?.value, timeSlot?.date + '_' + times?.value, timeSlot?.date)">
+												<span>{{ times?.value }}</span>
 											</a>
 										</li>
 									</ul>
@@ -202,7 +111,10 @@
 
 				<!-- Submit Section -->
 				<div class="submit-section proceed-btn text-right">
-					<button routerLink="/checkout" class="btn btn-primary submit-btn">Proceed to Pay</button>
+					<button 
+					[ngClass]="selectedSlotValues === undefined ? 'disabled' : '' "
+					class="btn btn-primary submit-btn" 
+					(click)="bookingConfirm()">Proceed to Pay</button>
 				</div>
 				<!-- /Submit Section -->
 
