--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -96,7 +96,7 @@ html {
 body {
     background-color: #ffffff;
     color: #272b41;
-    font-family: "Comfortaa";
+    font-family: "Poppins",sans-serif;
     font-size: 1rem;
     height: 100%;
     overflow-x: hidden;
