--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -94,7 +94,7 @@ html {
 }
 
 body {
-    background-color: #ffffff;
+    background-color: #f8f9fa;
     color: #272b41;
     font-family: "Poppins",sans-serif;
     font-size: 1rem;
