--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -19,7 +19,7 @@
                         <span></span>
                     </span>
                 </a>
-                <a href="index.html" class="navbar-brand logo">
+                <a href="/index" class="navbar-brand logo">
                     <img src="assets/img/logo.png" class="img-fluid" alt="Logo">
                 </a>
             </div>
