Update Profile Functionality

--- a/src/app/module/online-consultation/online-consultation.component.html
+++ b/src/app/module/online-consultation/online-consultation.component.html
@@ -135,7 +135,7 @@
                                     </ul>
                                 </div>
                                 <div class="clinic-booking">
-                                    <a class="view-pro-btn" routerLink="/doctor-profile">View Profile</a>
+                                    <a class="view-pro-btn" (click)="appointmentForward(doctor?._id)" href="javascript:void(0);">View Profile</a>
                                     <a class="apt-btn" (click)="appointmentForward(doctor?._id)" href="javascript:void(0);">Book Appointment</a>
                                 </div>
                             </div>
